css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* COMMON RULES */

.fs_14 {
    font-size: 14px;
}

.fs_11 {
    font-size: 11px;
}

/* BODY */

body {
    background-color: #dfe0dd;
    margin: 0 auto;
    height: 100vh;
    width: 100%;
}

.dark-mode {
    background-color: #0e1113;
}

#app {
    width: 100%;
}

#bg_header {
    width: 100%;
    height: 130px;
    position: fixed;
    top: 0;
    z-index: -1;
    background-color: #00a884;
}

.dark-mode #bg_header {
    display: none;
}

.container-lg, .row {
    height: 95vh;
    min-width: 83%;
    background-color: #fafafa;
}

.row>* {
    padding-right: 0;
    padding-left: 0;
}

.row {
    flex-wrap: nowrap;
}

/* LEFT MENU */

#left_menu {
    height: 100%;
    /* min-width: 280px; */
}

/* HEADER LEFT */

.header_left {
    height: 60px;
    background-color: #eaeaea;
    border-right: 1px solid #afadad;
}

.dark-mode .header_left {
    background-color: #202c33;
} 
.profile_pic {
    height: 40px;
    min-width: 40px;
    max-width: 40px;
}

.dark-mode .profile_pic {
    color: white;
}

.profile_pic img {
    height: 100%;
    width: 100%;
    object-fit: cover;
    object-position: center;
    border-radius: 50%;
    cursor: pointer;
}

.header_left_icons, .header_right_icons {
    font-size: 20px;
}

.header_left_icons a, .header_right_icons a, .footer_icons a{
    color: #b1b1b1;
}

/* ALERT_MUTE */

.alert_mute {
    height: 90px;
    background-color: #53bdeb;
}

.dark-mode .alert_mute {
    background-color: #182229;
}


.alert_left {
    height: 50px;
    min-width: 50px;
    font-size: 22px;
    border-radius: 50%;
    background-color: white;
    color: #53bdeb;
    cursor: pointer;
}

.dark-mode .alert_left {
    background-color: #53bdeb;
    color: black;
}

.dark-mode .alert_right {
    color: white;
}

/* SEARCH BAR */

.search_bar {
    height: 40px;
}

.dark-mode .search_bar {
    background-color: #111b21;
}

#search {
    height: 30px;
    width: 100%;
    border: none;
    box-shadow: 1px 1px 1px lightgray;
    padding-left: 10px;
    background-color: white;
}

.dark-mode #search, .dark-mode #search_icon {
    background-color: #202c33;
    box-shadow: 1px 1px 1px rgb(75, 74, 74);
}

#search:focus {
    outline: none;
}

#search_icon {
    height: 30px;
    background-color: white;
    box-shadow: 1px 1px 1px lightgray;
}

#search_icon i {
    padding: 0 30px;
    color: #b1b1b1;
}

/* CONTACTS */

.contacts {
    height: calc(100% - 190px);
    background-color: white;
    overflow-y:auto;
}

.contact {
    height: 70px;
    border-bottom: 1px solid #ece8e8;
    cursor: pointer;
}

.dark-mode .contact {
    border-bottom: 1px solid rgb(39, 39, 39);
}

.dark-mode .contact, .dark-mode .contacts {
    background-color: #111b21;
    color: white;
}

.contact_profile_pic {
    height: 50px;
    width: 50px;
}

.contact_profile_pic img {
    height: 100%;
    object-fit: cover;
    object-position: center;
    border-radius: 50%;
    cursor: pointer;
}

.contact_info {
    width: 100%;
    position: relative;
    line-height: 20px;
}

.last_sent {
    color: rgba(0,0,0,0.5);
}

.dark-mode .contact_info, .dark-mode .last_sent {
    color: white;
}

.last_message_time {
    position: absolute;
    top: 0;
    right: 10px;
    color: rgba(0,0,0,0.5);
}

.dark-mode .last_message_time {
    color: white;
}

.active {
    background-color: #e9ebeb;
}
.dark-mode .active {
    background-color: #2a3942;
}

/* MESSAGE WINDOW */

#message_window {
    height: 100%;
    background-image: url(../img/mine.jpg);
    background-repeat: repeat;
    overflow-y: scroll;
    /* min-width: 350px; */
    overflow: auto;
}

.dark-mode #message_window {
    background-image: url(../img/mine_dark.jpg);
}

.header_right {
    height: 60px;
    background-color: #eaeaea;
}

.dark-mode .header_right {
    background-color: #202c33;
} 

.last_access {
    color: color: rgba(0,0,0,0.5);;
}

.dark-mode .last_access {
    color: white;
}

.convo {
    width: 100%;
    height: calc(100% - 120px);
    margin: 0 auto;
    overflow: auto;
}

.message {
    background-color: white;
    border-radius: 10px;
    margin: 7px 0;
    max-width: 45%;
    position: relative;
}

.dark-mode .message {
    background-color: #202c33;
    color: white;
}

.message_text {
    padding: 8px;
}

.message.sent {
    background-color: #d5f9ba;
}

.dark-mode .message.sent {
    background-color: #005c4b;
}

.message_row.sent {
    justify-content: end;
}

.timestamp {
    height: 100%;
    color: #b1b1b1;
    position: relative;
}

.message_menu {
    position: absolute;
    top: 0;
    right: 1em;
}

.fa-solid.fa-angle-down {
    color: #b1b1b1;
    display: none;
    font-size: 1.5em;
}

.fa-solid.fa-angle-down {
    display: block;
    visibility: hidden;
    cursor: pointer;
}

.message_menu:hover .fa-solid.fa-angle-down{
    visibility: visible;
}



/* FOOTER */

.footer_right {
    height: 60px;
    background-color: #eaeaea;
}

.dark-mode .footer_right {
    background-color: #202c33;
} 

#send_text {
    width: 90%;
    padding: 10px;
    margin: 10px;
    border: none;
    border-radius: 5px;
}

#send_text:focus {
    outline: none;
}

.footer_icons {
    width: 5%;
    display: flex;
    justify-content: center;
    align-items: center;
}

/* SCROLLBAR STYLES */
::-webkit-scrollbar { width: 8px; height: 3px;}
::-webkit-scrollbar-button {  background-color: rgb(163, 161, 161); }
::-webkit-scrollbar-track {  background-color: #acabab;}
::-webkit-scrollbar-track-piece { background-color: rgb(218, 216, 216);}
::-webkit-scrollbar-thumb { height: 50px; background-color: rgb(163, 161, 161); border-radius: 3px;}
::-webkit-scrollbar-corner { background-color: #acabab;}
::-webkit-resizer { background-color: #666;}

.dark-mode ::-webkit-scrollbar { width: 8px; height: 3px;}
.dark-mode ::-webkit-scrollbar-button {  background-color: #666; }
.dark-mode ::-webkit-scrollbar-track {  background-color: #646464;}
.dark-mode ::-webkit-scrollbar-track-piece { background-color: #000;}
.dark-mode ::-webkit-scrollbar-thumb { height: 50px; background-color: #666; border-radius: 3px;}
.dark-mode ::-webkit-scrollbar-corner { background-color: #646464;}
.dark-mode ::-webkit-resizer { background-color: #666;}


/* DEBUG RULES */

